crates/solite-fmt/src/snapshots/solite_fmt__tests__delete_with_returning.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- delete from t where id = 5 returning *

-- Output:
delete from t
where id = 5
returning *;
