crates/solite-fmt/src/snapshots/solite_fmt__tests__detach_database.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- detach database other

-- Output:
detach database other;
