crates/solite-fmt/src/snapshots/solite_fmt__tests__drop_index.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- drop index idx_t_a

-- Output:
drop index idx_t_a;
