crates/solite-fmt/src/snapshots/solite_fmt__tests__drop_table.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- drop table t

-- Output:
drop table t;
