crates/solite-fmt/src/snapshots/solite_fmt__tests__drop_table_if_exists.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- drop table if exists t

-- Output:
drop table if exists t;
