crates/solite-fmt/src/snapshots/solite_fmt__tests__drop_trigger.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- drop trigger tr_t

-- Output:
drop trigger tr_t;
