crates/solite-fmt/src/snapshots/solite_fmt__tests__drop_view.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- drop view v

-- Output:
drop view v;
