crates/solite-fmt/src/snapshots/solite_fmt__tests__explain.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- explain select a from t

-- Output:
explain
select a from t;
