crates/solite-fmt/src/snapshots/solite_fmt__tests__explain_query_plan.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- explain query plan select a from t

-- Output:
explain query plan
select a from t;
