crates/solite-fmt/src/snapshots/solite_fmt__tests__identifier_with_spaces.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- select "column name" from "table name"

-- Output:
select "column name" from "table name";
