crates/solite-fmt/src/snapshots/solite_fmt__tests__insert_default_values.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- insert into t default values

-- Output:
insert into t default values;
